# aionexusmods

./: .gitignore  README.md  mypy.ini  pyproject.toml
aionexusmods/: __init__.py  models.py  nexusmods.py  schemas.py
tests/: mock_data.py  test_aionexusmods.py  test_mock_data.py
