[tool.poetry]
name = "aionexusmods"
version = "0.1.4"
description = ""
authors = ["Greatness7 <Greatness7@gmail.com>"]
include = ["aionexusmods/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
pydantic = "^1.8.1"
aiolimiter = "^1.0.0-beta.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
aioresponses = "^0.7.2"
mypy = "^0.812"
black = "^20.8b1"
devtools = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
