[tool.poetry]
name = "aionexusmods"
version = "0.4.1"
description = ""
authors = ["Greatness7 <Greatness7@gmail.com>"]
include = ["aionexusmods/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
aiolimiter = "^1.0.0-beta.1"
pydantic = "^1.8.1"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
mypy = "^0.812"
black = "^20.8b1"
aioresponses = "^0.7.2"
toml = "^0.10.2"
devtools = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
