[tool.poetry]
name = "aionexusmods"
version = "0.5.0"
description = ""
license = "MIT"
authors = ["Greatness7 <Greatness7@gmail.com>"]
readme = "README.md"
include = ["aionexusmods/py.typed"]

[tool.poetry.dependencies]
python = "^3.6.1"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
aiolimiter = "^1.0.0-beta.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
aioresponses = "^0.7.2"
black = "^20.8b1"
devtools = "^0.6.1"
mypy = "^0.812"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
